@@ -2,7 +2,7 @@ Cyberduck
 https://cyberduck.io/
 
 6.4.0
-- [Feature] Support for eu-west-3 (Paris) region (S3)
+- [Feature] Support for eu-west-3 (Paris) region (S3) (#10207)
 - [Feature] Support for Integrated Windows Authentication (IWA) authentication (WebDAV, Windows)
 - [Feature] Save passwords in credential manager (Windows) (#9988)
 - [Feature] Support authenticating with HTTP proxy (Windows)
@@ -10,6 +10,11 @@ https://cyberduck.io/
 - [Bugfix] Do not save passphrase for vaults by defaults (Cryptomator, Windows)
 - [Bugfix] Application freezes for long time when selecting many files for upload (Windows)
 - [Bugfix] Set modification date on uploaded files (OneDrive) (#10171)
+- [Bugfix] Application hangs when selecting a large number of files for upload (Windows)
+- [Bugfix] Do not save vault passphrase by default (Cryptomator)
+- [Bugfix] Fix failures when attempting to read attributes of incomplete multipart upload (S3)
+- [Bugfix] Reloading directory after enabling "Auto detect" in preferences does not ask to unlock vault (Cryptomator) (#10214)
+- [Bugfix] Transfer labled incomplete when segment required multiple attempts to finish (S3, OpenStack Swift, Backblaze B2) (#9552)
 
 6.3.5
 - [Bugfix] Crash on launch in update checker (Windows)
